# miso-lims

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
crates/miso-api/: Cargo.toml
crates/miso-api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/miso-api/src/middleware/: auth.rs  mod.rs
crates/miso-api/src/routes/: health.rs  mod.rs  projects.rs  samples.rs  scanner.rs
crates/miso-application/: Cargo.toml
crates/miso-application/src/: lib.rs
crates/miso-application/src/dto/: mod.rs  project.rs  sample.rs
crates/miso-application/src/services/: mod.rs  project_service.rs  sample_service.rs
crates/miso-application/src/use_cases/: mod.rs
crates/miso-domain/: Cargo.toml
crates/miso-domain/src/: errors.rs  lib.rs
crates/miso-domain/src/entities/: box_entity.rs  library.rs  mod.rs  pool.rs  project.rs  run.rs  sample.rs  sequencer.rs  user.rs
crates/miso-domain/src/repositories/: mod.rs
crates/miso-domain/src/services/: barcode_validation.rs  index_collision.rs  mod.rs
crates/miso-domain/src/value_objects/: barcode.rs  concentration.rs  dna_index.rs  mod.rs  position.rs  qc_status.rs  volume.rs
crates/miso-frontend/: Cargo.toml
crates/miso-frontend/src/: lib.rs
crates/miso-infrastructure/: Cargo.toml
crates/miso-infrastructure/src/: lib.rs
crates/miso-infrastructure/src/hardware/: mod.rs  printer.rs  scanner.rs
crates/miso-infrastructure/src/persistence/: database.rs  mod.rs
crates/miso-infrastructure/src/persistence/entities/: mod.rs  project.rs  sample.rs
crates/miso-infrastructure/src/persistence/repositories/: mod.rs  project_repo.rs  sample_repo.rs
crates/miso-migration/: Cargo.toml
crates/miso-migration/src/: lib.rs  m20241215_000001_create_project.rs  m20241215_000002_create_sample.rs  main.rs
papes/: Analyzing MISO LIMS GitHub Profile.txt  Building a Viable Alternative System.txt  Rust Rewrite Research and Planning.txt  Rust Rewrite Strategic Implementation Analysis.txt
