[package]
name = "miso-infrastructure"
description = "Infrastructure implementations for MISO LIMS (database, hardware clients)"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
# Internal
miso-domain.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Database ORM
sea-orm.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async traits
async-trait.workspace = true

# Date/Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Logging
tracing.workspace = true

# LDAP
ldap3.workspace = true

[dev-dependencies]
mockall.workspace = true

